@@ -334,6 +334,7 @@ enum WorldIntConfigs
     CONFIG_WINTERGRASP_BATTLETIME,
     CONFIG_WINTERGRASP_NOBATTLETIME,
     CONFIG_WINTERGRASP_RESTART_AFTER_CRASH,
+    CONFIG_ALLOW_TWO_SIDE_INTERACTION_CHAT_AREA,
     INT_CONFIG_VALUE_COUNT
 };
 
